--- a/src/app/registration-form-component/registration-form-component.html
+++ b/src/app/registration-form-component/registration-form-component.html
@@ -7,4 +7,4 @@
         <button type="submit">Submit</button>
     </form>
 </div>
-<button type="">
+<button type="button" (click)="sendUserData()">Check User Info</button>
