--- a/src/app/registration-form-component/registration-form-component.html
+++ b/src/app/registration-form-component/registration-form-component.html
@@ -6,6 +6,10 @@
         <input type="text" placeholder="Enter Contact" formControlName="contactNumber" />
         <button type="submit">Submit</button>
     </form>
+    <button type="button" (click)="loadUserInfo()">
+  Load User Info Dynamically
+</button>
 </div>
+
 <button type="button" (click)="sendUserData()">Check User Info</button>
 
