--- a/src/app/user-info-component/user-info-component.html
+++ b/src/app/user-info-component/user-info-component.html
@@ -1,1 +1,3 @@
-<h2>User Details</h2>
+<h2>User Details from Dynamic Component</h2>
+<h4>User Name: {{userDetails.userName}}</h4>
+<h5>Contact Number: {{userDetails.contactNumber}}</h5>
